# vending-machine-be

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: init_database.rs  lib.rs  main.rs
src/categories/: entity.rs  handler.rs  repository.rs
src/config/: database.rs
src/entities/: cash_inventory.rs  categories.rs  mod.rs  orders.rs  products.rs
src/handlers/: cash_inventory.rs  categories.rs  mod.rs  orders.rs  products.rs
src/product/: entity.rs  repository.rs
src/products/: entity.rs  handler.rs  repository.rs
src/repositories/: cash_inventory.rs  categories.rs  mod.rs  orders.rs  products.rs
