[package]
name = "bluepi-assignment-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
postgres = "0.19"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenvy = "0.15" 
tracing-subscriber = "0.3"
tracing = "0.1"
tower-http = { version = "0.6", features = ["full"] }
bson = "2.6"
chrono = "0.4"